# LearningFP

./: LICENSE  README.md
Cpp-FP/: .clang-format  CMakeLists.txt
Cpp-FP/CalculateDiscountsOnOrders/: CMakeLists.txt  CalculateDiscountsOnOrders.h  LinqContainer.h  main.cpp
Cpp-FP/CompositionExample/: CMakeLists.txt  CompositionExample.h  CompositionExampleTypes.h  main.cpp
Cpp-FP/CompositionHelper/: CompositionHelper.hpp  LinqContainer.hpp
Cpp-FP/CompositionHelperTests/: CMakeLists.txt  CompositionHelperTests.h  main.cpp
Cpp-FP/FPHelper/: CompositionHelper.hpp  FPUtility.hpp  LINQ_CPP.hpp  LinqContainer.hpp  Traits.hpp
Rust-FP/: Cargo.toml
Rust-FP/CalculateDiscountsOnOrders/: Cargo.toml
Rust-FP/CalculateDiscountsOnOrders/src/: main.rs
Rust-FP/composition_example/: Cargo.toml
Rust-FP/composition_example/src/: main.rs
