[package]
name = "composition_example"
version = "0.1.0"
authors = ["Michael Rizkalla <Michael.Anis1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
linq = "0.0.1-release"
tool = "0.2.1"
